--- a/NBAPlayers/Base.lproj/Main.storyboard
+++ b/NBAPlayers/Base.lproj/Main.storyboard
@@ -529,14 +529,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="rWc-Qd-J1L">
-                                <rect key="frame" x="0.0" y="44" width="375" height="574"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="insetGrouped" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="rWc-Qd-J1L">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PlayerCell" id="QTq-gc-yG4" customClass="PlayerTableViewCell" customModule="NBAPlayers" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="68"/>
+                                        <rect key="frame" x="16" y="55.5" width="343" height="68"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="QTq-gc-yG4" id="Kcc-G8-ujt">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="68"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="343" height="68"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="dyq-qA-hTK">
@@ -560,7 +560,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="14" translatesAutoresizingMaskIntoConstraints="NO" id="tit-69-4YA" userLabel="Team Logo Image View">
-                                                    <rect key="frame" x="293" y="9" width="50" height="50"/>
+                                                    <rect key="frame" x="261" y="9" width="50" height="50"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="50" id="0mr-uN-yJY"/>
                                                         <constraint firstAttribute="height" constant="50" id="Dbe-50-O4U"/>
@@ -618,7 +618,7 @@
                             <constraint firstItem="HBm-wH-xlk" firstAttribute="centerY" secondItem="ocI-xa-peg" secondAttribute="centerY" id="KxN-NI-dG8"/>
                             <constraint firstItem="Zk0-lt-1hW" firstAttribute="centerY" secondItem="ocI-xa-peg" secondAttribute="centerY" constant="-40" id="Ot1-Tg-bUL"/>
                             <constraint firstItem="ocI-xa-peg" firstAttribute="trailing" secondItem="rWc-Qd-J1L" secondAttribute="trailing" id="QpL-RH-gWO"/>
-                            <constraint firstItem="rWc-Qd-J1L" firstAttribute="top" secondItem="ocI-xa-peg" secondAttribute="top" id="VWG-lo-cia"/>
+                            <constraint firstItem="rWc-Qd-J1L" firstAttribute="top" secondItem="J6I-qe-KzP" secondAttribute="top" id="VWG-lo-cia"/>
                             <constraint firstItem="Kq2-f1-Xh4" firstAttribute="centerX" secondItem="ocI-xa-peg" secondAttribute="centerX" id="XgK-Ms-c0m"/>
                             <constraint firstItem="HBm-wH-xlk" firstAttribute="centerX" secondItem="ocI-xa-peg" secondAttribute="centerX" id="hIB-ey-GrE"/>
                             <constraint firstItem="Zk0-lt-1hW" firstAttribute="centerX" secondItem="ocI-xa-peg" secondAttribute="centerX" id="m3r-Rq-lAF"/>
@@ -690,6 +690,7 @@
                                                     </constraints>
                                                 </imageView>
                                             </subviews>
+                                            <color key="backgroundColor" systemColor="tertiarySystemGroupedBackgroundColor"/>
                                             <constraints>
                                                 <constraint firstAttribute="bottom" secondItem="qc3-SB-Zgf" secondAttribute="bottom" constant="20" id="7EB-aM-Ye0"/>
                                                 <constraint firstAttribute="trailing" secondItem="qc3-SB-Zgf" secondAttribute="trailing" constant="20" id="ZyI-Tn-nC6"/>
@@ -910,6 +911,9 @@
         </systemColor>
         <systemColor name="systemRedColor">
             <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="tertiarySystemGroupedBackgroundColor">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
